<resources>
    <string name="app_name">TimeTable_S</string>
    <string name="greet">Hi there : )</string>
    <string name="Login">Already A User</string>
    <string name="LoginPage">Redirect to Login</string>
    <string name="SignUpPage">Redirect to SignUp</string>
    <string name="Register">New to here? Register </string>
    <string name="Name">Name</string>
    <string name="AskName">Enter your Name</string>
    <string name="Brnach">Branch</string>
    <string name="BranchSpinner"> Select your Branch</string>
    <string name="Year">Year</string>
    <string name="btnSubmit">Submit</string>
    <string name="showMail">Mail-ID</string>
    <string name="showPassW">Password</string>
    <string name="askMail">Please enter your Mail-ID</string>
    <string name="askPassW">Set A Password</string>
    <string name="Log_into">LogIn</string>
    <string name="LogPass">Enter your password</string>
    <string name="Time">Time</string>
    <string name="course">course</string>
    <string name="editTT">Edit TimeTable</string>

</resources>